# qgml

./: .buildinfo  .gitignore  CHANGELOG.md  CHAT_SUMMARY.md  DOCUMENTATION_STRATEGY.md  FIX_JEDI.md  FIX_JUPYTER.md  GITHUB_SETUP.md  JAX_PYTORCH_COMPARISON_README.md  QRC_IMPLEMENTATION_SUMMARY.md  QRC_MNIST_INTEGRATION.md  QUICK_START.md  README.html  README.md  analyze_quantum_effects.py  check_emojis.py  clean_and_migrate_commit.sh  clean_branding.py  clean_remaining_emojis.py  colab_setup.py  commits_to_migrate.txt  debug_longer_quantum_training.py  debug_matrix_init.py  debug_training_differences.py  figure1.html  function_by_function_comparison.py  generate_reconstruction_plots.py  genindex.html  gpu_compatible_comparison.py  gpu_convergence_testing.py  gpu_dimensionality_crossover.py  gpu_master_test_suite.colab.out  gpu_performance_test.ipynb  gpu_performance_test.py  index.html  init_hermitian_matrix.html  insert_as_first_commit.sh  inspect_commit.sh  jax_pytorch_quantum_scaling_comparison.py  large_dataset_gpu_test.py  (+23 more)
.doctrees/: index.doctree  visualization_gallery.doctree
.doctrees/api/: quantum_geometry.doctree  topological_analysis.doctree
.doctrees/experiments/: index.doctree
.doctrees/user_guide/: index.doctree
_images/: graphviz-18005d76d4e984e1b0612bab888b8af432005a60.png.map  graphviz-88b95c23bf8e51ffec291a9441787fa8af963c49.png.map
_modules/: index.html
_sources/: figure1.md.txt  index.rst.txt  torch_performance.md.txt  visualization_gallery.rst.txt
api/: core.html  quantum_geometry.html  quantum_information.html  topological_analysis.html
doc/: compile_paper.sh  matrix_trainer.md  references.bib  working_paper.aux  working_paper.bbl  working_paper.blg  working_paper.out  working_paper.tex  working_paper_appendix.tex
docs/: Makefile  README.md  conf.py  index.rst  init_hermitian_matrix.md  requirements.txt  supp_section.md  visualization_gallery.rst
examples/: __init__.py  fuzzy_sphere_test.py  geometric_analysis_demo.py  matrix_trainer_test.py  qrc_analysis_example.py  qrc_mnist_qgml_analysis.ipynb  qrc_mnist_qgml_analysis.py  sphere_test.py
experimental_results/: index.html  performance_visualizations.html
experiments/: README.md  index.html
output/: config.json
qgml/: __init__.py
real_test_comparison_results/: real_test_comparison_report.md
testing/: index.html  integration_tests.html
tests/: README.md  __init__.py  conftest.py  test_functionality.py  test_migration_validation.py
user_guide/: index.html  installation.html  quickstart.html
visualization_examples/: README.md
visualizations/: index.html
work_1ae8853/: pyproject.toml
work_1ae8853/qgml/matrix_trainer/: __init__.py  matrix_trainer.py
work_283e25f/: project_status.md
work_35c0f94/: README.md  requirements.txt  setup.py
work_3fad8b7/: .gitignore  EXPERIMENT_SUMMARY.md  GPU_TEST_SUITE_README.md  OPTIMIZER_COMPARISON_README.md  QUANTUM_FLUCTUATION_DEBUG_NOTES.md  debug_hermiticity_projection.py  debug_longer_training.py  debug_quantum_components.py  debug_quantum_fluctuation.py  debug_training_step_by_step.py  gpu_batch_size_effects.py  gpu_master_test_suite.py  investigate_optimizer_behavior.py  pyproject.toml  quick_training_test.py  real_test_comparison.py  sgd_vs_adam_high_dim.py  sgd_vs_adam_quantum.py  simple_experiment_tracker.py
work_b2f32e2/: setup.py
work_be53748/: pyproject.toml
work_be53748/examples/: simple_test.py
work_be53748/qgml/: __init__.py
work_be53748/qgml/dimension_estimation/: base.py  test_qcml.py
work_be53748/qgml/manifolds/: __init__.py
work_be53748/qgml/quantum/: __init__.py  gradient_check.py  matrix_trainer.py
work_be53748/tests/: test_estimators.py
work_e07010d/: README.md
(+237 files in other folders)
