[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgml"
version = "0.1.0"
description = "Quantum Computing and Machine Learning Library"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
] 